--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,11 @@
 <body>
 	<%= render 'layouts/header' %>
 	<div class="container">
+		<% flash.each do |name, msg| %>
+			<%= content_tag(:div, msg, class: "alert alert-info") %>
+		<% end %>
+		<p class="notice"><%= notice %></p>
+       	<p class="alert"><%= alert %></p>
 		<%= yield %>
 	</div>
 
