--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@pin), html: {multipart: true} do |f| %>
+<%= form_for @pin, html: {multipart: true} do |f| %>
   <% if @pin.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@pin.errors.count, "error") %> prohibited this pin from being saved:</h2>
@@ -20,6 +20,6 @@
     <%= f.text_field :description, class: "form-control"%>
   </div>
   <div class="actions">
-    <%= f.submit , class: "btn btn-primary"%>
+    <%= f.submit class: "btn btn-primary"%>
   </div>
 <% end %>
