--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
         <li><%= link_to "About", about_path %></li>
         <% if user_signed_in? %>
           <li>
-            <%= button_to new_pin_path, :method => :get, class: "btn btn-primary navbar-btn" do %>
+            <%= button_to new_pin_path, method: :get, class: "btn btn-primary navbar-btn" do %>
               <span class="glyphicon glyphicon-plus"></span> New Pin
             <% end %>
           </li>
