--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -20,5 +20,8 @@
     </div>
   <% end %>
 </div>
+<div class="center">
+  <%= will_paginate @posts, renderer: BootstrapPagination::Rails %>
+</div>
 
 
