--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,4 +1,3 @@
-<%= link_to 'Back', pins_path %>
 <div class="row">
 	<div class="col-md-offset-2 col-md-8">
 		<div class="panel panel-default">
@@ -7,13 +6,16 @@
 			</div>
 			<div class="panel-body">
 				<p><%= @pin.description %></p>
-				<p><strong><%= @pin.user.email if @pin.user %></strong></p>
+				<p><strong><%= @pin.user.name if @pin.user %></strong></p>
 
 				<% if @pin.user == current_user %>
 					<%= link_to edit_pin_path(@pin) do %>
               		<span class="glyphicon glyphicon-pencil"></span> Edit 
             		<% end %>
 				<% end %>
+			</div>
+			<div class="panel-footer">
+				<%= link_to 'Back', pins_path %>
 			</div>
 		</div>
 	</div>
